2012-09-24 Roman
- FIX:Transport.Serial: Resource embracing expand to full TTrOut::start() function for prevent posible crash on
    multiply requests from different threads.
- !!!:DAQ.SMH2Gi: New module version 0.5.0 for deep integration to Segnetics SMH2Gi hardware.
    Shared memory for communication to SMLogics and devices on MR/MC bus protocol is realized.
- !:DAQ: Parameters loading is moved straight to function load_(), from enable().
    To parameter type object TTipParam() bind functions from object TParamContr() is added:
    enable(), disable(), vlGet(), vlSet(), vlArchMake() and cntrCmdProc().
- DAQ.=Tmpl=: Significant updated.
- FIX:DAQ.Comedy: Control interface's type "int" is fixed to "dec".
- FIX:ICP_DAS: Control interface's type "int" is fixed to "dec". Configure field "MOD_PRMS" size is expanded to "100000".
- FIX:DAQ.SNMP: Configure field "OID_LS" size is expanded to "100000".
- !:Transport.Serial: KeepAlive timeout is added to output transport, for connection reset allow.


2012-09-12 Roman
- FIX:UI.QTCfg: Vertical scroll position restore after syntax highlight rules set, for text edit areas.


2012-09-10 Roman
- !!:DAQ.ICP_DAS: Version 1.0.0 is released.
- FIX:DAQ.ICP_DAS: AO writing alow is fixed for I-8xxx modules series.


2012-09-06 Roman
- !!!!:DAQ.ICP_DAS: Support for all main I-87xxx and I-8xxx modules is added. Link with -li8k is fixed. Digital IO reversing set writed by ports.
- FIX:Transport.Serial: Stop output transport at read() error, possible by serial device lost.
- FIX:UI.QTCfg: Size policy for read-values is changed to QSizePolicy::Ignored. Values' labels text selection by mouse is added.
- FIX:UI.WebCfgD: Read-values space for Boolean is added.


2012-09-05 Roman
- FIX:UI.QTCfg: ComboBox items accumulation at update is fixed for no exited table's item delegate.


2012-08-30 Roman
- !!:DB.LibsDB.{OscadaLibs.db,vcaBase.db,vcaTest.db}, DB.AGLKS.*: